--- a/AIML_Module_4_Lab_2_Introduction_to_Gradient_Descent.ipynb
+++ b/AIML_Module_4_Lab_2_Introduction_to_Gradient_Descent.ipynb
@@ -764,12 +764,12 @@
         "plt.show()"
       ],
       "metadata": {
-        "id": "hYq0q2BDVbOw",
-        "outputId": "f4190a19-8212-413e-d3f4-637f9571eef4",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 452
-        }
+        },
+        "id": "hYq0q2BDVbOw",
+        "outputId": "f4190a19-8212-413e-d3f4-637f9571eef4"
       },
       "execution_count": 61,
       "outputs": [
@@ -841,12 +841,12 @@
         "plt.show()"
       ],
       "metadata": {
-        "id": "-evU91PCVntL",
-        "outputId": "f4cdbb6b-3a68-407f-c738-82c2cf666b37",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 545
-        }
+        },
+        "id": "-evU91PCVntL",
+        "outputId": "f4cdbb6b-3a68-407f-c738-82c2cf666b37"
       },
       "execution_count": 63,
       "outputs": [
@@ -897,12 +897,12 @@
         "plt.show()"
       ],
       "metadata": {
-        "id": "k5-1o7ogVrZZ",
-        "outputId": "fc864c08-c3c1-447f-a3a1-6e998509e66f",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 545
-        }
+        },
+        "id": "k5-1o7ogVrZZ",
+        "outputId": "fc864c08-c3c1-447f-a3a1-6e998509e66f"
       },
       "execution_count": 65,
       "outputs": [
@@ -925,11 +925,11 @@
         "initial_model_loss"
       ],
       "metadata": {
-        "id": "3wJrPZ41VuC-",
-        "outputId": "5fda0374-fdb5-4c1c-b509-7f6309e37eb4",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "3wJrPZ41VuC-",
+        "outputId": "5fda0374-fdb5-4c1c-b509-7f6309e37eb4"
       },
       "execution_count": 66,
       "outputs": [
@@ -1011,11 +1011,11 @@
         "print(f\"Now have smaller model loss: {updated_model_loss} vs {initial_model_loss}\")"
       ],
       "metadata": {
-        "id": "WbSZibFgVxom",
-        "outputId": "c611b011-9406-4bcd-97a3-aec522d8634e",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "WbSZibFgVxom",
+        "outputId": "c611b011-9406-4bcd-97a3-aec522d8634e"
       },
       "execution_count": 68,
       "outputs": [
@@ -1041,12 +1041,12 @@
         "plt.show()"
       ],
       "metadata": {
-        "id": "_HAQ5cC1V0aF",
-        "outputId": "eceecc0b-1f9f-4156-d30d-48e73a749fe3",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 545
-        }
+        },
+        "id": "_HAQ5cC1V0aF",
+        "outputId": "eceecc0b-1f9f-4156-d30d-48e73a749fe3"
       },
       "execution_count": 69,
       "outputs": [
@@ -1154,11 +1154,11 @@
         "GD = gradient_descent(300, 0.0001)\n"
       ],
       "metadata": {
-        "id": "dwos2scdV986",
-        "outputId": "ab7dd4cc-ddc6-4413-c87f-58bcd49880ea",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "dwos2scdV986",
+        "outputId": "ab7dd4cc-ddc6-4413-c87f-58bcd49880ea"
       },
       "execution_count": 72,
       "outputs": [
@@ -1182,12 +1182,12 @@
         "plt.show()"
       ],
       "metadata": {
-        "id": "IVi1rObcV-df",
-        "outputId": "2d359390-b864-49b5-dc2c-8faef554cc1f",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 545
-        }
+        },
+        "id": "IVi1rObcV-df",
+        "outputId": "2d359390-b864-49b5-dc2c-8faef554cc1f"
       },
       "execution_count": 73,
       "outputs": [
@@ -1210,11 +1210,11 @@
         "print(f\"Original Coefficients: {coeffs}\")"
       ],
       "metadata": {
-        "id": "YmwmjpHEWAvA",
-        "outputId": "c4894af0-aaaf-4987-cf6f-7bff1d20e20b",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "YmwmjpHEWAvA",
+        "outputId": "c4894af0-aaaf-4987-cf6f-7bff1d20e20b"
       },
       "execution_count": 74,
       "outputs": [
@@ -1241,12 +1241,12 @@
         "plt.show()"
       ],
       "metadata": {
-        "id": "tTiBIg_4WCS2",
-        "outputId": "3862f159-7330-4205-a70f-261e28df14f8",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 564
-        }
+        },
+        "id": "tTiBIg_4WCS2",
+        "outputId": "3862f159-7330-4205-a70f-261e28df14f8"
       },
       "execution_count": 75,
       "outputs": [
@@ -1675,6 +1675,90 @@
       ],
       "metadata": {
         "id": "DrDNjfDZb5Ce"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "z7i3nEfAcupc"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "3. a second degree polynomial contains only one minima which is the global minima. However, a 5 degreee polynomial comtains many minimas and so converges to different values on different initalizations. This is why initialization does not matter in the case of two degree polynomial."
+      ],
+      "metadata": {
+        "id": "QJGxD8uZc-_H"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "4. changing the function to find maxima:"
+      ],
+      "metadata": {
+        "id": "tVUMe6I0eDN1"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def calc_gradient_2nd_poly_for_GD(coeffs, inputs_x, outputs_y, lr):\n",
+        "    \"\"\"\n",
+        "    calculates the gradient for a second degree polynomial.\n",
+        "\n",
+        "    Args:\n",
+        "        coeffs: a,b and c, for a 2nd degree polynomial [ y = ax^2 + bx + c ]\n",
+        "        inputs_x: x input datapoints\n",
+        "        outputs_y: actual y output points\n",
+        "        lr: learning rate\n",
+        "\n",
+        "    Returns: Calculated gradients for the 2nd degree polynomial, as a tuple of its parts for a,b,c respectively.\n",
+        "\n",
+        "    \"\"\"\n",
+        "    a_s = []\n",
+        "    b_s = []\n",
+        "    c_s = []\n",
+        "\n",
+        "    y_bars = eval_2nd_degree(coeffs, inputs_x)\n",
+        "\n",
+        "    for x,y,y_bar in list(zip(inputs_x, outputs_y, y_bars)):    # take tuple of (x datapoint, actual y label, predicted y label)\n",
+        "        x_squared = x ** 2\n",
+        "        partial_a = x_squared * (y - y_bar)\n",
+        "        a_s.append(partial_a)\n",
+        "        partial_b = x * (y - y_bar)\n",
+        "        b_s.append(partial_b)\n",
+        "        partial_c = (y - y_bar)\n",
+        "        c_s.append(partial_c)\n",
+        "\n",
+        "    num = [i for i in y_bars]\n",
+        "    n = len(num)\n",
+        "\n",
+        "    gradient_a = (-2 / n) * sum(a_s)\n",
+        "    gradient_b = (-2 / n) * sum(b_s)\n",
+        "    gradient_c = (-2 / n) * sum(c_s)\n",
+        "\n",
+        "\n",
+        "    a_new = coeffs[0] + lr * gradient_a\n",
+        "    b_new = coeffs[1] + lr * gradient_b\n",
+        "    c_new = coeffs[2] + lr * gradient_c\n",
+        "\n",
+        "    new_model_coeffs = (a_new, b_new, c_new)\n",
+        "\n",
+        "    # update with these new coeffs:\n",
+        "    new_y_bar = eval_2nd_degree(new_model_coeffs, inputs_x)\n",
+        "\n",
+        "    updated_model_loss = loss_mse(outputs_y, new_y_bar)\n",
+        "    return updated_model_loss, new_model_coeffs, new_y_bar"
+      ],
+      "metadata": {
+        "id": "h5vWXGSadxT6"
       },
       "execution_count": null,
       "outputs": []
