--- a/AIML_Module_4_Lab_3_Gradient_Descent.ipynb
+++ b/AIML_Module_4_Lab_3_Gradient_Descent.ipynb
@@ -685,11 +685,11 @@
         "print('Final error: {:0.3f}'.format(cost_history[-1]))"
       ],
       "metadata": {
-        "id": "2XfDJMR9yxbg",
-        "outputId": "011c6279-7374-49b8-aea1-007d1a2f6702",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "2XfDJMR9yxbg",
+        "outputId": "011c6279-7374-49b8-aea1-007d1a2f6702"
       },
       "execution_count": 40,
       "outputs": [
@@ -717,11 +717,11 @@
         "print('Final error: {:0.3f}'.format(cost_history[-1]))"
       ],
       "metadata": {
-        "id": "exQ0mWopzyst",
-        "outputId": "a3a619d0-d981-4270-af04-4173fe8d421b",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "exQ0mWopzyst",
+        "outputId": "a3a619d0-d981-4270-af04-4173fe8d421b"
       },
       "execution_count": 41,
       "outputs": [
@@ -749,11 +749,11 @@
         "print('Final error: {:0.3f}'.format(cost_history[-1]))"
       ],
       "metadata": {
-        "id": "2SuqVTu3z7Uy",
-        "outputId": "9d76a2e1-9b01-4023-d719-6ebb0a083519",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "2SuqVTu3z7Uy",
+        "outputId": "9d76a2e1-9b01-4023-d719-6ebb0a083519"
       },
       "execution_count": 42,
       "outputs": [
@@ -781,11 +781,11 @@
         "print('Final error: {:0.3f}'.format(cost_history[-1]))"
       ],
       "metadata": {
-        "id": "sYNotw-qz_P3",
-        "outputId": "f913fc69-ca88-4516-aa63-cebe2903940a",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "sYNotw-qz_P3",
+        "outputId": "f913fc69-ca88-4516-aa63-cebe2903940a"
       },
       "execution_count": 43,
       "outputs": [
@@ -808,12 +808,12 @@
         "uploaded = files.upload()"
       ],
       "metadata": {
-        "id": "8IIGo8tdtVA6",
-        "outputId": "56247a0f-9472-4db5-ef4a-cfbbaedc4f91",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 73
-        }
+        },
+        "id": "8IIGo8tdtVA6",
+        "outputId": "56247a0f-9472-4db5-ef4a-cfbbaedc4f91"
       },
       "execution_count": 54,
       "outputs": [
@@ -1095,12 +1095,12 @@
         "print('Final error: {:0.3f}'.format(cost_history[-1]))"
       ],
       "metadata": {
-        "id": "-qIwAN13udQi",
-        "outputId": "7b607181-bec2-44e2-ed44-5ecd25d3124c",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 390
-        }
+        },
+        "id": "-qIwAN13udQi",
+        "outputId": "7b607181-bec2-44e2-ed44-5ecd25d3124c"
       },
       "execution_count": 76,
       "outputs": [
@@ -1178,12 +1178,12 @@
         "print('Final error: {:0.3f}'.format(cost_history[-1]))"
       ],
       "metadata": {
-        "id": "uQUHZGjmuhoJ",
-        "outputId": "50e868b0-1af2-444f-c2d8-98cca88b0eff",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 303
-        }
+        },
+        "id": "uQUHZGjmuhoJ",
+        "outputId": "50e868b0-1af2-444f-c2d8-98cca88b0eff"
       },
       "execution_count": 48,
       "outputs": [
@@ -1280,11 +1280,11 @@
         "print('Final error: {:0.3f}'.format(cost_history[-1]))"
       ],
       "metadata": {
-        "id": "Jw1fcKAH5fhJ",
-        "outputId": "bdcca11f-208a-4aff-eca0-f42bee59485a",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "Jw1fcKAH5fhJ",
+        "outputId": "bdcca11f-208a-4aff-eca0-f42bee59485a"
       },
       "execution_count": 82,
       "outputs": [
@@ -1314,11 +1314,11 @@
         "print('Final error: {:0.3f}'.format(cost_history[-1]))"
       ],
       "metadata": {
-        "id": "WleNQYBf5hTW",
-        "outputId": "96d521fc-073e-439e-e0cd-5974cc85c380",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "WleNQYBf5hTW",
+        "outputId": "96d521fc-073e-439e-e0cd-5974cc85c380"
       },
       "execution_count": 83,
       "outputs": [
@@ -1347,11 +1347,11 @@
         "print('Final error: {:0.3f}'.format(cost_history[-1]))"
       ],
       "metadata": {
-        "id": "MIDRaNxB5rQV",
-        "outputId": "c94c2c01-d5d8-4dee-e0cf-dd41a7a13322",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "MIDRaNxB5rQV",
+        "outputId": "c94c2c01-d5d8-4dee-e0cf-dd41a7a13322"
       },
       "execution_count": 84,
       "outputs": [
@@ -1365,6 +1365,15 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "For the same learning rate (0.1) SCD seems to outperform batch GD and Minibatch GD."
+      ],
+      "metadata": {
+        "id": "2pK3gMBb6OnT"
+      }
     }
   ]
 }
